feat: fix sonarqube alerts